# controllers/employee.js
@@ -1,0 +1,187 @@
+// const mongodb = require('../db/connect');
+// const ObjectId = require('mongodb').ObjectId;
+
+// const getAll = (req, res) => {
+//   mongodb
+//     .getDb()
+//     .db()
+//     .collection('employees')
+//     .find()
+//     .toArray((err, lists) => {
+//       if (err) {
+//         res.status(400).json({ message: err });
+//       }
+//       res.setHeader('Content-Type', 'application/json');
+//       res.status(200).json(lists);
+//     });
+// };
+
+// const getSingle = (req, res) => {
+//   if (!ObjectId.isValid(req.params.id)) {
+//     res.status(400).json('Must use a valid employees id to find a employees.');
+//   }
+//   const userId = new ObjectId(req.params.id);
+//   mongodb
+//     .getDb()
+//     .db()
+//     .collection('employees')
+//     .find({ _id: userId })
+//     .toArray((err, result) => {
+//       if (err) {
+//         res.status(400).json({ message: err });
+//       }
+//       res.setHeader('Content-Type', 'application/json');
+//       res.status(200).json(result[0]);
+//     });
+// };
+
+// const createEmployees = async (req, res) => {
+//   const employees = {
+//     firstName: req.body.firstName,
+//     lastName: req.body.lastName,
+//     email: req.body.email,
+//     birthday: req.body.birthday
+//   };
+//   const response = await mongodb.getDb().db().collection('employees').insertOne(employees);
+//   if (response.acknowledged) {
+//     res.status(201).json(response);
+//   } else {
+//     res.status(500).json(response.error || 'Some error occurred while creating the employees.');
+//   }
+// };
+
+// const updateEmployees = async (req, res) => {
+//   const userId = new ObjectId(req.params.id);
+//   // be aware of updateOne if you only want to update specific fields
+//   const employees = {
+//     firstName: req.body.firstName,
+//     lastName: req.body.lastName,
+//     email: req.body.email,
+//     birthday: req.body.birthday
+//   };
+//   const response = await mongodb
+//     .getDb()
+//     .db()
+//     .collection('employees')
+//     .replaceOne({ _id: userId }, employees);
+//   console.log(response);
+//   if (response.modifiedCount > 0) {
+//     res.status(204).send();
+//   } else {
+//     res.status(500).json(response.error || 'Some error occurred while updating the employees.');
+//   }
+// };
+
+// const deleteEmployees = async (req, res) => {
+//   const userId = new ObjectId(req.params.id);
+//   const response = await mongodb.getDb().db().collection('employees').remove({ _id: userId }, true);
+//   console.log(response);
+//   if (response.deletedCount > 0) {
+//     res.status(204).send();
+//   } else {
+//     res.status(500).json(response.error || 'Some error occurred while deleting the employee.');
+//   }
+// };
+
+// module.exports = {
+//   getAll,
+//   getSingle,
+//   createEmployees,
+//   updateEmployees,
+//   deleteEmployees
+// };
+
+const mongodb = require('../db/connect');
+const ObjectId = require('mongodb').ObjectId;
+
+const getAll = (req, res) => {
+  mongodb
+    .getDb()
+    .db()
+    .collection('contacts')
+    .find()
+    .toArray((err, lists) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(lists);
+    });
+};
+
+const getSingle = (req, res) => {
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Must use a valid contact id to find a contact.');
+  }
+  const userId = new ObjectId(req.params.id);
+  mongodb
+    .getDb()
+    .db()
+    .collection('contacts')
+    .find({ _id: userId })
+    .toArray((err, result) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(result[0]);
+    });
+};
+
+const createContact = async (req, res) => {
+  const contact = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    favoriteColor: req.body.favoriteColor,
+    birthday: req.body.birthday
+  };
+  const response = await mongodb.getDb().db().collection('contacts').insertOne(contact);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+  }
+};
+
+const updateContact = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  // be aware of updateOne if you only want to update specific fields
+  const contact = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    favoriteColor: req.body.favoriteColor,
+    birthday: req.body.birthday
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('contacts')
+    .replaceOne({ _id: userId }, contact);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the contact.');
+  }
+};
+
+const deleteContact = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const response = await mongodb.getDb().db().collection('contacts').remove({ _id: userId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+  }
+};
+
+module.exports = {
+  getAll,
+  getSingle,
+  createContact,
+  updateContact,
+  deleteContact
+};
