# routes/index.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/employees', require('./employees'))
+router.use('/employee', require('./employee'))
 
 module.exports = router;
