# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "My API",
-    "description": "Employees API",
+    "description": "Temple API",
     "version": "1.0.0"
   },
   "host": "cse-341-project-lesson-5.onrender.com",
@@ -18,7 +18,7 @@
         "responses": {}
       }
     },
-    "/employees/": {
+    "/employee/": {
       "get": {
         "description": "",
         "produces": [
@@ -28,6 +28,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -49,6 +52,9 @@
                 "email": {
                   "example": "any"
                 },
+                "favoriteColor": {
+                  "example": "any"
+                },
                 "birthday": {
                   "example": "any"
                 }
@@ -66,7 +72,7 @@
         }
       }
     },
-    "/employees/{id}": {
+    "/employee/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -83,6 +89,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -108,6 +117,9 @@
                   "example": "any"
                 },
                 "email": {
+                  "example": "any"
+                },
+                "favoriteColor": {
                   "example": "any"
                 },
                 "birthday": {
